--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     <div class="owl-stage-outer">
                         <div class="owl-stage"
                             style="transform: translate3d(-1229px, 0px, 0px); transition: all 0s ease 0s; width: 3688px;">
-                            <!-- cloned1 -->
+                            <!-- item1 -->
                             <div class="owl-item cloned" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -454,7 +454,7 @@
                                 </div>
                             </div>
 
-                            <!-- cloned2 -->
+                            <!-- item -->
                             <div class="owl-item cloned" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -480,8 +480,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- cloned3 -->
+                            <!-- item -->
                             <div class="owl-item cloned" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -507,8 +506,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- 1 -->
+                            <!-- item -->
                             <div class="owl-item" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -534,8 +532,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- 2 -->
+                            <!-- item -->
                             <div class="owl-item" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -561,8 +558,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- active3 -->
+                            <!-- item -->
                             <div class="owl-item active" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -588,8 +584,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- cloned_active1 -->
+                            <!-- item -->
                             <div class="owl-item cloned active" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -615,8 +610,7 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <!-- cloned_active2 -->
+                            <!-- item -->
                             <div class="owl-item cloned active" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -642,7 +636,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- cloned3 -->
+                            <!-- item -->
                             <div class="owl-item cloned" style="width: 379.667px; margin-right: 30px;">
                                 <div class="blog_item">
                                     <div class="blog_header">
@@ -851,20 +845,20 @@
                 </div>
             </div>
         </div>
-            <div class="footer_copyright">
-                <div class=" container footer_content">
-                    <div class="footer_left">
-                        Copyright © 2021
-                        <span>DexignZone</span>
-                        . All rights reserved.
-                    </div>
-                    <div class="footer_right">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                    </div>
+        <div class="footer_copyright">
+            <div class=" container footer_content">
+                <div class="footer_left">
+                    Copyright © 2021
+                    <span>DexignZone</span>
+                    . All rights reserved.
+                </div>
+                <div class="footer_right">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
                 </div>
             </div>
+        </div>
     </footer>
 
     <!-- back_to_top -->
@@ -940,7 +934,7 @@ https://cdn.jsdelivr.net/npm/wowjs@1.1.3/dist/wow.min.js
     </script>
 
     <!-- backToTop js  -->
-    <script>   
+    <script>
         let backtotop = document.getElementById("myBtn");
         window.onscroll = function () { scrollFunction() };
 
